Page MenuHome GnuPG

scdaemon: need quirk for Gemalto IDBridge CT30 (aka PC-TR)
Closed, ResolvedPublic

Description

Even though this reader advertises support for NAD != 0, it will reject an S(IFS
request) with a non-null NAD with an error. Forcing nonnull_nad to 0 appears to
make the reader work correctly.

Related Objects

Mentioned Here
D196: 432_d

Event Timeline

werner lowered the priority of this task from Normal to Wishlist.May 9 2014, 4:45 PM
werner removed a project: Bug Report.
werner added projects: scd, Feature Request.
gniibe added a subscriber: gniibe.

Could you please give more information, such as its USB vendor ID and product ID?
I assume that you are using GnuPG's internal CCID driver.
If you have a patch, please attach it here.
Is the reader supported by PC/SC-lite? If so, we could see how it is handled.

It seems that you missed the patch attached to the original submission, which
has all the required info: vendor ID is VENDOR_GEMPC (0x08e6), product ID is
0x3437, and the change to be applied indeed is in the internal CCID driver.

The reader is supported by PC/SC-lite, which never uses non-null NADs.

werner added a subscriber: werner.

I'll apply the patch. Thanks.